<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weather.Home.view.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weather.FavoriteFragment"
        android:label="@string/Favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.example.weather.AlertsFragment"
        android:label="@string/Alerts"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weather.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>